# lora-instruct

./: .env.example  .gitignore  .pre-commit-config.yaml  .provision.json  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  app.py  finetune.py  inference.py  pyproject.toml  requirements.txt  tox.ini
.claude-plugin/: marketplace.json
.claude/agents/: code-quality-reviewer.md  security-reviewer.md  test-coverage-reviewer.md
.claude/commands/: review-pr.md
.claude/skills/code-review/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.github/workflows/: claude-code-review.yml  claude-review.yml  claude.yml  codex-code-review.yml  delulu-deploy.yaml  discord-orchestrator-deploy.yml  pr-title.yml
apps/delulu_discord/: Dockerfile  Makefile  pyproject.toml
apps/delulu_discord/src/delulu_discord/: commands.py  dispatcher.py  handlers.py  main.py  repo_allowlist.py  repo_config.py  session_manager.py  settings.py  streaming.py
apps/delulu_discord/tests/: test_streaming.py
apps/delulu_sandbox_modal/: Makefile  pyproject.toml
apps/delulu_sandbox_modal/src/delulu_sandbox_modal/: app.py  events.py  repo_provisioner.py
apps/delulu_sandbox_modal/tests/: test_repo_provisioner.py  test_stream_parsing.py
apps/delulu_sandbox_modal/tools/: verify_flock.py
dataset/: prompts.jsonl
deployment/: deploy_local.sh
docs/: architecture.md  delulu-usage.md  development.md  monorepo-conventions.md  plan-deep-agent-rl.md
inference/: README.md  bench.py  deploy_local.sh
infra/discord-orchestrator/: .env.example  ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml
infra/discord-orchestrator/apps/delulu_discord/src/delulu_discord/: dispatcher.py  session_manager.py
infra/discord-orchestrator/apps/delulu_sandbox_modal/: Makefile
infra/discord-orchestrator/prd/: app-separation.md  repo-provisioning.md  streaming.md
infra/discord-orchestrator/src/bot/: handlers.py  main.py  session_manager.py
infra/discord-orchestrator/src/config/: __init__.py  settings.py
infra/discord-orchestrator/src/modal_dispatch/: app.py  sandbox.py  workspace.py
infra/managed-agents/: .env.example  Makefile  README.md  pyproject.toml  requirements-runtime.txt
infra/managed-agents/deploy/: k8s-agent-job.yaml  validate-helm-chart.sh
infra/managed-agents/deploy/helm/managed-agents/: Chart.yaml  values-development.yaml  values-production.yaml  values.yaml
infra/managed-agents/deploy/helm/managed-agents/templates/: _helpers.tpl  api-configmap.yaml  api-deployment.yaml  api-service.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  node-agent-daemonset.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  rbac.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  resource-quota.yaml
infra/managed-agents/docker/: .dockerignore  Dockerfile.api  Dockerfile.node-agent  Dockerfile.runtime  docker-compose.yaml
infra/managed-agents/examples/: agent-config.json  sessions.yaml
infra/managed-agents/harnesses/: aider.Dockerfile  claude-code.Dockerfile  custom-python.Dockerfile  swe-agent.Dockerfile
infra/managed-agents/src/api/: deps.py  main.py  models.py
infra/managed-agents/src/api/routes/: agents.py  environments.py  events.py  sessions.py
infra/managed-agents/src/db/: __init__.py  models.py  session.py
infra/managed-agents/src/orchestrator/: __init__.py  base.py  container.py  harness.py  hybrid.py  k8s.py  node_agent.py  rootfs_builder.py  sandbox.py  scheduler.py
infra/managed-agents/src/runtime/: __init__.py  agent_loop.py  claude_code.py  launcher.py  streaming.py
infra/managed-agents/src/runtime/llm/: __init__.py  anthropic_client.py  base.py  vllm_client.py
infra/managed-agents/src/runtime/tools/: __init__.py  bash.py  file_ops.py  web.py
notebook/: 1.0.0-han-llama-7b-base.ipynb  1.0.1-han-mpt-7b-base.ipynb  1.0.2-han-redpajama-incite-7b-base.ipynb  1.0.3-han-falcon-7b-base.ipynb  2.0.0-han-inference-3B-test.ipynb
plugins/code-review/: README.md
plugins/code-review/.claude-plugin/: plugin.json
plugins/code-review/commands/: code-review.md
prd/: app-separation.md  cancel-run.md  monorepo-reorg.md  repo-provisioning.md  sandbox-non-root-user.md  setrepo-persistence-bug.md  streaming.md
scripts/: job_data.py  scrape_ai_trainer_jobs.py
templates/: README.md
utils/: prompter.py
