[tool.black]
line-length = 88

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"

[tool.poetry]
name = "lora-instruct"
version = "0.1.0"
description = ""
authors = ["Han Lee <lee.hanchung@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "lora_instruct"}]

[tool.poetry.dependencies]
python = "^3.10"
sentencepiece = "^0.1.99"
ipykernel = "^6.22.0"
accelerate = "^0.18.0"
appdirs = "^1.4.4"
loralib = "^0.1.1"
bitsandbytes = "^0.38.1"
black = {extras = ["jupyter"], version = "^23.3.0"}
datasets = "^2.12.0"
fire = "^0.5.0"
peft = {git = "https://github.com/huggingface/peft.git"}
transformers = ">=4.28.0"
gradio = "^3.28.3"
einops = "^0.6.1"
python-dotenv = "^1.0.0"
wandb = "^0.15.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
