[tool.poetry]
name = "managed-agents"
version = "0.1.0"
description = "Self-hosted Claude Managed Agents clone — API server and runtime"
authors = ["Anthropic <support@anthropic.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework and server
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"

# Database
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
asyncpg = "^0.29.0"  # PostgreSQL async driver
alembic = "^1.13.0"  # Database migrations

# Caching and task queues
redis = "^5.0.0"
aioredis = "^2.0.1"

# HTTP client
httpx = "^0.25.0"
aiohttp = "^3.9.0"

# LLM integrations
anthropic = "^0.25.0"
openai = "^1.3.0"  # For vLLM compatibility

# Kubernetes client
kubernetes-asyncio = "^28.0.0"

# System monitoring (for node agent)
psutil = "^5.9.0"

# Utilities
beautifulsoup4 = "^4.12.0"
html5lib = "^1.1"
python-dotenv = "^1.0.0"
click = "^8.1.0"

# Logging and observability
python-json-logger = "^2.0.0"
structlog = "^24.1.0"

# Async utilities
asyncio-contextmanager = "^1.0.0"
tenacity = "^8.2.0"  # Retry logic

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"  # For test client
black = "^23.11.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
